Fix margin notes clipping on right side

--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -208,7 +208,7 @@
   align-self: start;
   justify-self: start;
   margin-top: 16px;
-  width: 260px;
+  width: 100%;
   font-family: "Caveat", cursive;
   font-size: 19px;
   line-height: 1.25;
